--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,18 @@
-numpy==1.21.6
-pandas==1.3.5
-scikit-learn==1.0.2
-matplotlib==3.5.1
-seaborn==0.11.2
-xgboost==1.5.2
+cycler==0.12.1
+fonttools==4.55.0
 joblib==1.1.0
+kiwisolver==1.4.7
+matplotlib==3.5.1
+numpy==1.21.6
+packaging==24.2
+pandas==1.3.5
+pillow==10.4.0
+pyparsing==3.1.4
+python-dateutil==2.9.0.post0
+pytz==2024.2
+scikit-learn==1.0.2
+scipy==1.10.1
+seaborn==0.11.2
+six==1.16.0
+threadpoolctl==3.5.0
+xgboost==1.5.2
